<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity" >

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText9"
        android:layout_alignBaseline="@+id/textView18"
        android:layout_alignBottom="@+id/textView18"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_label"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/custom_button"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_below="@+id/emailField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp"
            android:textSize="18sp" />

        <TextView
            android:text="FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordField"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="21dp"
            android:id="@+id/textView16"
            android:textSize="18sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText7"
            android:layout_alignBaseline="@+id/textView16"
            android:layout_alignBottom="@+id/textView16"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textIsSelectable="false" />

        <TextView
            android:text="LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:id="@+id/textView17"
            android:textSize="18sp"
            android:layout_below="@+id/editText7"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText8"
            android:layout_alignBottom="@+id/textView17"
            android:layout_alignLeft="@+id/editText7"
            android:layout_alignStart="@+id/editText7" />

        <TextView
            android:text="Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3"
            android:layout_alignBottom="@+id/textView11"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="Adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:id="@+id/textView12"
            android:textSize="18sp"
            android:layout_below="@+id/textView11"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_alignBaseline="@+id/textView12"
            android:layout_alignBottom="@+id/textView12"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="City"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:id="@+id/textView18"
            android:textSize="18sp"
            android:layout_below="@+id/editText4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText9" />
    </LinearLayout>
    />

</RelativeLayout>